# msiparse

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.py
.github/workflows/: cli_only.yml  full_bundle.yml  rust.yml
app/: main.py  requirements.txt
gui/: MSI_Installation_Workflow_Analysis.md  __init__.py  __main__.py  help_dialog_template.md  msiparse.spec  msiparser-gui.py  msiparser_gui.py  pyi_rth_onnxruntime.py  requirements-dev.txt  requirements.txt  setup.py
gui/ai_research_documents/: MSI Execution Deep Dive Analysis_.txt  msi_research.txt  new_malware_research.txt
gui/dialogs/: archive.py  base.py  hex.py  image.py  pdf.py  text.py
gui/tests/: conftest.py  test_main_window.py  test_preview_integration.py  test_streams_tab.py
gui/tests/test_data/: custom_ps_action  custom_vb_action  registry_persistence
gui/threads/: command.py  identifystreams.py
gui/utils/: __init__.py  archive7z.py  common.py  gui.py  preview.py  subprocess_utils.py
gui/utils/gui/: __init__.py  certificate_tab.py  execution_tab.py  extraction.py  footprint_constants.py  footprint_tab.py  footprint_utils.py  help_tab.py  helpers.py  main_window.py  metadata_tab.py  preview.py  streams_tab.py  syntax_highlighter.py  tables_tab.py  workflow_tab.py
src/: main.rs
