[package]
name = "msiparse"
version = "0.1.0"
edition = "2021"
description = "A cross-platform tool to extract embedded files and tables from MSI files"
authors = ["Roland Győrffi <roland.gyorffi@opswat.com>"]
license = "MIT License"
repository = "https://github.com/filescanio/msiparse"

[dependencies]
clap = { version = "4.5.20", features = ["cargo"] }
msi = "0.8.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = "0.3.36"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
